fixed card spacing

--- a/wp-content/themes/danfleming/style.css
+++ b/wp-content/themes/danfleming/style.css
@@ -1185,7 +1185,7 @@ body {
   position: relative;
   margin-top: 42px;
   height:474px;
-  padding:20px 0 0 60px;
+  padding:15px 0 0 60px;
   background-position:right center;
   background-size:contain;
   background-repeat:no-repeat;
